--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,10 @@
     <dependencies>
         <dependency>
             <groupId>org.mongodb</groupId>
-            <artifactId>mongodb-driver</artifactId>
-            <version>3.6.4</version>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.11.1</version> <!-- use latest stable -->
         </dependency>
+
     </dependencies>
 
     <build>
