--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,9 @@
     <dependencies>
         <dependency>
             <groupId>org.mongodb</groupId>
-            <artifactId>mongodb-driver-sync</artifactId>
-            <version>4.11.1</version> <!-- use latest stable -->
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.6.4</version>
         </dependency>
-
     </dependencies>
 
     <build>
@@ -31,7 +30,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>imc.com.App</mainClass>
+                            <mainClass>com.napier.sem.App</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
